<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jp.seraphyware.example</groupId>
	<artifactId>java11browser</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.module>java11browser</main.module>
		<main.class>jp.seraphyware.example.Java11BrowserMain</main.class>
		<exename>java11browser.exe</exename>
	</properties>

	<build>
		<plugins>
			<!-- osの種類を検出する -->
			<plugin>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.0</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>detect</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<!-- Java11でビルド -->
					<release>11</release>
				</configuration>
			</plugin>
			<!-- https://mvnrepository.com/artifact/pl.project13.maven/git-commit-id-plugin -->
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.0.3</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
				</configuration>
			</plugin>
			<!-- JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<!-- jarは他の依存モジュール(jar)と同じ場所に入れる。(パスの指定が簡単なので) -->
					<outputDirectory>${project.build.directory}/mods</outputDirectory>
					<archive>
						<manifest>
							<!-- クラスパス形式の実行可能jar時のためにMANIFESTに依存jarのClass-Path追加 -->
							<addClasspath>true</addClasspath>
							<!-- モジュール時、クラスパスの実行可能jar時のいずれの場合でもエントリポイントとなる -->
							<mainClass>${main.class}</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Version>${project.version} ${git.commit.id.abbrev}</Implementation-Version>
							<Implementation-Vendor><![CDATA[seraphyware]]></Implementation-Vendor>
							<Build-SCM-Information>commit: ${git.commit.id.abbrev} branch: ${git.branch}</Build-SCM-Information>
							<Build-At>${git.build.time}</Build-At>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<!-- 依存するJARのlibへの展開 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/mods</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.3.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<!-- Mavenからモジュールとして実行できるようにする。 
				https://www.mojohaus.org/exec-maven-plugin/examples/example-exec-for-java-programs.html
				mvn package exec:exec -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<executable>${java.home}/bin/java</executable>
					<arguments>
						<!-- controlsfxから内部クラスへのアクセスのため(モジュールとして使う場合に必要) -->
						<argument>--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls</argument>
						<argument>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</argument>
						<!-- WebViewのhttps通信時のJava11のバグのため -->
						<argument>-Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2</argument>
						<argument>-p</argument>
						<modulepath />
						<argument>-m</argument>
						<!-- JARにmainClassを埋め込む状態ではないのでmainClassの指定は必要 -->
						<argument>${main.module}/${main.class}</argument>
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<!-- openjfxの依存jarのうち、空のxxxEmptyモジュールについて不要につき削除する -->
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<delete>
									<fileset dir="${project.build.directory}/mods">
										<include name="javafx-*.jar" />
										<exclude name="javafx-*-win.jar" />
										<exclude name="javafx-*-mac.jar" />
										<exclude name="javafx-*-linux.jar" />
									</fileset>
								</delete>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Launch4jによるjarファイルのexe化を行う. http://launch4j.sourceforge.net/docs.html -->
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.25</version>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/mods/${exename}</outfile>
							<jar>target/mods/${project.build.finalName}.jar</jar>
							<errTitle>Failed to execute the ${project.artifactId}</errTitle>
							<!-- <icon>java11browser.ico</icon>  -->
							<!-- JAVA_HOMEを検索・指定するためカスタムヘッドを利用する -->
							<objs>
								<obj>src/Launch4JStub/w32api/crt2.o</obj>
								<obj>src/Launch4JStub/head/head.o</obj>
								<obj>src/Launch4JStub/head/guihead.o</obj>
							</objs>
							<libs>
								<lib>src/Launch4jStub/w32api/libmingw32.a</lib>
								<lib>src/Launch4jStub/w32api/libgcc.a</lib>
								<lib>src/Launch4jStub/w32api/libmsvcrt.a</lib>
								<lib>src/Launch4jStub/w32api/libkernel32.a</lib>
								<lib>src/Launch4jStub/w32api/libuser32.a</lib>
								<lib>src/Launch4jStub/w32api/libadvapi32.a</lib>
								<lib>src/Launch4jStub/w32api/libshell32.a</lib>
								<lib>src/Launch4jStub/w32api/libshfolder.a</lib>
							</libs>
							<jre>
								<path>jre</path>
								<minVersion>11.0</minVersion>
							</jre>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>15.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>15.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>15.0.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.0-alpha1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<!-- 2021/3/12現在、alpha5があるが、こちらはmodule-infoに不足があり動かない。
				https://jira.qos.ch/browse/LOGBACK-1491 -->
			<version>1.3.0-alpha4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx
		 javafx13以降であれば、java9でshpreadsheetなどで使うjavafx内部クラスへのアクセスができなくなっていたものが再度できるようになっている。
		 ただし、moduleとして使う場合には、起動時に add-exports で内部アクセスを許可する必要がある。クラスパスによる実行であればjava8時台とかわらない。
		-->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>

		<!-- CDIのリファレンス実装 https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-shaded -->
		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-shaded</artifactId>
			<version>4.0.2.Final</version>
		</dependency>

	</dependencies>
</project>
